Fix zoom and pan feature to shiftKey based

--- a/webclient/static/css/style.css
+++ b/webclient/static/css/style.css
@@ -29,19 +29,11 @@ div #canvasDiv {
 
 div #canvasWrapper {
  /* border: 20px inset rgba(0,0,0, 0.5);*/
-  width: 1000px;
-  height: 1000px;
 }
-
 
 #canvas {
     border: 3px solid black;
-    width: 1000px;
-    height: 1000px;
-    /*box-shadow: inset 0 0 20px 20px rgba(255,0,0,0.5); */
 }
-
-
 div #imageControlContainer {
   padding-top: 75%;
 }
